--- a/libs/ui/src/lib/rc-item/rc-item.component.scss
+++ b/libs/ui/src/lib/rc-item/rc-item.component.scss
@@ -38,3 +38,9 @@
 .list-item:last-child {
     border: none;
 }
+
+.item-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
