--- a/libs/ui/src/lib/rc-item/rc-item.component.html
+++ b/libs/ui/src/lib/rc-item/rc-item.component.html
@@ -1,10 +1,8 @@
 <div class="container">
     <div class="item-content">
-    <h1>{{cardName}}</h1>
-    <button mat-mini-fab color="warn" (click)="deleteCard()">
-        <mat-icon>X</mat-icon>
-    </button>
-</div>
+        <h1>{{cardName}}</h1>
+        <button mat-mini-fab color="warn" (click)="deleteCard()">X</button>
+    </div>
     <form [formGroup]="userForm" (ngSubmit)="onFormSubmit()">
         <mat-form-field>
             <input matInput formControlName="cardItem" type="text" placeholder="Enter a new item">
@@ -17,9 +15,7 @@
             <mat-card-content>
                 <div class="item-content">
                     <p>{{item.cardItem}}</p>
-                    <button mat-mini-fab color="warn" (click)="deleteItem(index)">
-                        <mat-icon>X</mat-icon>
-                    </button>
+                    <button mat-mini-fab color="warn" (click)="deleteItem(index)">X</button>
                 </div>
             </mat-card-content>
         </mat-card>
